Solve spacing problem in section two

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ body {
     align-items: center;
     text-align: center;
     width: 150px;
+    margin-bottom: 50px;
  }
 
 .info-header {
